# tmc-translate

./: .gitignore  README.md  pyproject.toml  std_yaml.py  terminology.xlsx
assets/: zh_cn_lite.json
src/tmc_translate/: __init__.py  hybrid_terminology_manager.py  main.py  minecraft_language_manager.py  models.py  rag_translator.py  terminology_manager.py
