[project]
name = "tmc-translate"
version = "0.1.0"
description = "A RAG-based Chinese-English terminology translation system using LangChain"
readme = "README.md"
authors = [
    { name = "Liyan Zhao", email = "return65535@qq.com" }
]
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.16",
    "langchain-community>=0.0.38",
    "langchain-core>=0.1.52",
    "langchain-openai>=0.1.7",
    "langchain-google-genai>=1.0.5",
    "chromadb>=0.4.24",
    "pandas>=2.2.2",
    "openpyxl>=3.1.2",
    "python-dotenv>=1.0.1",
    "ollama>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
tmc-translate = "tmc_translate.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
